--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditSpecification.xhtml
@@ -32,36 +32,36 @@
         <p:row>
             <div>
                 <p:outputLabel for="internalFormat" value="#{msgs.internFileFormat}" />
-                <p:selectOneMenu id="internalFormat" value="#{ProjectForm.myProjekt.fileFormatInternal}">
+                <p:selectOneMenu id="internalFormat" value="#{ProjectForm.project.fileFormatInternal}">
                     <f:selectItems value="#{HelperForm.fileFormatsInternalOnly}" />
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
             </div>
             <div>
                 <p:outputLabel for="dmsExportImageDir" value="#{msgs.dmsImportImagesPath}" />
-                <p:inputText id="dmsExportImageDir" placeholder="#{msgs.dmsImportImagesPath}" styleClass="input-with-button" value="#{ProjectForm.myProjekt.dmsImportImagesPath}">
+                <p:inputText id="dmsExportImageDir" placeholder="#{msgs.dmsImportImagesPath}" styleClass="input-with-button" value="#{ProjectForm.project.dmsImportImagesPath}">
                     <p:ajax event="blur"/>
                     <p:ajax event="keyup" update="editForm:projectTabView:copyDmsExportImageDirButton"/>
                 </p:inputText>
-                <p:commandButton id="copyDmsExportImageDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportImageDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.myProjekt.dmsImportImagesPath}"/>
+                <p:commandButton id="copyDmsExportImageDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportImageDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.project.dmsImportImagesPath}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportErrorDir" value="#{msgs.dmsImportErrorPath}" />
-                <p:inputText id="dmsExportErrorDir" placeholder="#{msgs.dmsImportErrorPath}" styleClass="input-with-button" value="#{ProjectForm.myProjekt.dmsImportErrorPath}">
+                <p:inputText id="dmsExportErrorDir" placeholder="#{msgs.dmsImportErrorPath}" styleClass="input-with-button" value="#{ProjectForm.project.dmsImportErrorPath}">
                     <p:ajax event="blur"/>
                     <p:ajax event="keyup" update="editForm:projectTabView:copyDmsExportErrorDirButton"/>
                 </p:inputText>
-                <p:commandButton id="copyDmsExportErrorDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportErrorDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}')" disabled="#{empty ProjectForm.myProjekt.dmsImportErrorPath}"/>
+                <p:commandButton id="copyDmsExportErrorDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportErrorDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}')" disabled="#{empty ProjectForm.project.dmsImportErrorPath}"/>
             </div>
             <div>
                 <p:outputLabel for="automaticExport" value="#{msgs.automaticDmsImport}" />
-                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjectForm.myProjekt.useDmsImport}" class="input">
+                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjectForm.project.useDmsImport}" class="input">
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="timeout" value="#{msgs.timeout}" />
-                <p:inputText id="timeout" placeholder="#{msgs.timeout}" class="input" value="#{ProjectForm.myProjekt.dmsImportTimeOut}">
+                <p:inputText id="timeout" placeholder="#{msgs.timeout}" class="input" value="#{ProjectForm.project.dmsImportTimeOut}">
                     <p:ajax event="blur"/>
                 </p:inputText>
             </div>
@@ -69,30 +69,30 @@
         <p:row>
             <div>
                 <p:outputLabel for="DmsFormat" value="#{msgs.dmsExportFormat}" />
-                <p:selectOneMenu id="DmsFormat" value="#{ProjectForm.myProjekt.fileFormatDmsExport}">
+                <p:selectOneMenu id="DmsFormat" value="#{ProjectForm.project.fileFormatDmsExport}">
                     <f:selectItems value="#{HelperForm.fileFormats}" />
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
             </div>
             <div>
                 <p:outputLabel for="dmsExportDir" value="#{msgs.dmsImportPathXmlFile}" />
-                <p:inputText id="dmsExportDir" placeholder="#{msgs.dmsImportPathXmlFile}" styleClass="input-with-button" value="#{ProjectForm.myProjekt.dmsImportRootPath}">
+                <p:inputText id="dmsExportDir" placeholder="#{msgs.dmsImportPathXmlFile}" styleClass="input-with-button" value="#{ProjectForm.project.dmsImportRootPath}">
                     <p:ajax event="blur"/>
                     <p:ajax event="keyup" update="editForm:projectTabView:copyDmsExportDirButton"/>
                 </p:inputText>
-                <p:commandButton id="copyDmsExportDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.myProjekt.dmsImportRootPath}"/>
+                <p:commandButton id="copyDmsExportDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.project.dmsImportRootPath}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportSuccessDir" value="#{msgs.dmsImportSuccessPath}" />
-                <p:inputText id="dmsExportSuccessDir" placeholder="#{msgs.dmsImportSuccessPath}" styleClass="input-with-button" value="#{ProjectForm.myProjekt.dmsImportSuccessPath}">
+                <p:inputText id="dmsExportSuccessDir" placeholder="#{msgs.dmsImportSuccessPath}" styleClass="input-with-button" value="#{ProjectForm.project.dmsImportSuccessPath}">
                     <p:ajax event="blur"/>
                     <p:ajax event="keyup" update="editForm:projectTabView:copyDmsExportSuccessDirButton"/>
                 </p:inputText>
-                <p:commandButton id="copyDmsExportSuccessDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportSuccessDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.myProjekt.dmsImportSuccessPath}"/>
+                <p:commandButton id="copyDmsExportSuccessDirButton" type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:projectTabView:dmsExportSuccessDir', '#{msgs.stringCopiedSuccess}', '#{msgs.stringCopiedError}');" disabled="#{empty ProjectForm.project.dmsImportSuccessPath}"/>
             </div>
             <div>
                 <p:outputLabel for="createDir" value="#{msgs.dmsImportCreateProcessFolder}" />
-                <p:selectBooleanCheckbox id="createDir" class="input" value="#{ProjectForm.myProjekt.dmsImportCreateProcessFolder}">
+                <p:selectBooleanCheckbox id="createDir" class="input" value="#{ProjectForm.project.dmsImportCreateProcessFolder}">
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
