--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
@@ -29,7 +29,7 @@
                 <h:form id="userProjectForm">
                     <p:dataTable var="item"
                                  id="selectProjectTable"
-                                 value="#{ProjectForm.lazyDTOModel}"
+                                 value="#{UserForm.projects}"
                                  lazy="true"
                                  paginator="true"
                                  rows="#{LoginForm.myBenutzer.tableSize}"
