--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml
@@ -25,7 +25,7 @@
                         <p:outputLabel for="additionalInputField" value="#{field.title}:"/>
                         <p:inputText id="additionalInputField" value="#{field.value}"
                                      styleClass="prozessKopieFeldbreite"
-                                     class="input" required="#{field.required and empty param['editForm:processFromTemplateTabView:performOpacQuery'] and empty param['editForm:processFromTemplateTabView:copyProcessData']}">
+                                     class="input" required="#{field.required and not empty param['editForm:save']}">
                             <p:ajax event="change"/>
                         </p:inputText>
                     </ui:fragment>
@@ -34,7 +34,7 @@
                         <p:outputLabel for="additionalSelectField" value="#{field.title}:"/>
                         <p:selectOneListbox id="additionalSelectField" value="#{field.value}"
                                             styleClass="prozessKopieFeldbreite"
-                                            class="input" required="#{field.required and empty param['editForm:processFromTemplateTabView:performOpacQuery'] and empty param['editForm:processFromTemplateTabView:copyProcessData']}">
+                                            class="input" required="#{field.required and not empty param['editForm:save']}">
                             <f:selectItems value="#{field.selectList}"/>
                             <p:ajax event="change"/>
                         </p:selectOneListbox>
