Enables you to enable validation for folders
How it works:
To turn on validation for the contents of a folder, switches appear on
the task property page. By clicking on a switch, the function can be
switched on or off.

Implementation:
A new table validationFolders (task × folder) is created. This saves the
variable validationFolders in the task. The taskEditDetails.xhtml page
has been enhanced with switches to enable and disable the validation in
a step. The functionality for this has been implemented in the class
TemplateForm. The same functionality for generating images has also been
moved here, and duplicate code has been summarized. The GeneratorSwitch
class has been renamed to FolderProcessingSwitch because the switches
are used equally for both types of processing. The tests were adapted or
supplemented.

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:panelGrid columns="2" layout="grid">
         <p:row>
-            <p:repeat var="generator" value="#{TemplateForm.generatorSwitches}">
+            <p:repeat var="generator" value="#{TemplateForm.generatableFolderSwitches}">
                 <div>
                     <p:outputLabel for="generator">
                         <h:outputFormat value="#{msgs.generator}">
@@ -26,6 +26,18 @@
                         </h:outputFormat>
                     </p:outputLabel>
                     <p:selectBooleanCheckbox id="generator" value="#{generator.value}" class="input">
+                        <p:ajax event="change" oncomplete="toggleSave()"/>
+                    </p:selectBooleanCheckbox>
+                </div>
+            </p:repeat>
+            <p:repeat var="validators" value="#{TemplateForm.validatableFolderSwitches}">
+                <div>
+                    <p:outputLabel for="validator">
+                        <h:outputFormat value="#{msgs.validator}">
+                            <f:param value="#{validator.label}"/>
+                        </h:outputFormat>
+                    </p:outputLabel>
+                    <p:selectBooleanCheckbox id="validator" value="#{validator.value}" class="input">
                         <p:ajax event="change" oncomplete="toggleSave()"/>
                     </p:selectBooleanCheckbox>
                 </div>
