Fix null on task edit details page for template tasks

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
@@ -30,7 +30,7 @@
                     </p:selectBooleanCheckbox>
                 </div>
             </p:repeat>
-            <p:repeat var="validators" value="#{TemplateForm.validatableFolderSwitches}">
+            <p:repeat var="validator" value="#{TemplateForm.validatableFolderSwitches}">
                 <div>
                     <p:outputLabel for="validator">
                         <h:outputFormat value="#{msgs.validator}">
