Add selenium tests for add clients to user groups

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/clients.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/clients.xhtml
@@ -30,8 +30,7 @@
         </p:column>
     </p:dataTable>
     <p:commandButton onclick="PF('addClientDialog').show()" id="addClientButton" value="#{msgs.clientAdd}"
-                     icon="fa fa-plus-circle fa-lg" immediate="true" rendered="#{isEditMode || isCreateMode}"
-                     class="button-filled-green">
+                     icon="fa fa-plus-circle fa-lg" immediate="true" class="button-filled-green">
     </p:commandButton>
 
 </ui:composition>
