Create overlay for null return to stay on the same page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
@@ -92,7 +92,7 @@
                                                      target="#{Metadaten.referringView}"/>
                         <f:param name="ProzesseID" value="#{process.id}"/>
                         <f:param name="BenutzerID" value="#{LoginForm.myBenutzer.id}"/>
-                        <f:param name="zurueck" value="AktuelleSchritteBearbeiten"/>
+                        <f:param name="stayOnCurrentPage" value="AktuelleSchritteBearbeiten"/>
                     </h:commandLink>
 
                     <!-- Re-generate all images action link -->
