--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditMets.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditMets.xhtml
@@ -167,7 +167,7 @@
                          icon="fa fa-plus-circle fa-lg"
                          iconPos="right"
                          immediate="true">
-            <f:setPropertyActionListener target="#{ProjectForm.zurueck}" value="/pages/projectEditMetsPopup"/>
+            <f:setPropertyActionListener target="#{ProjectForm.stayOnCurrentPage}" value="/pages/projectEditMetsPopup"/>
         </p:commandButton>
     </p:panel>
 
