--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -38,6 +38,7 @@
             <p:commandLink id="deleteProperty"
                            title="#{msgs.delete}"
                            oncomplete="toggleSave()"
+                           update="propertyTable"
                            action="#{ProcessForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProcessForm.property}" value="#{item}"/>
