--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -35,6 +35,7 @@
             <p:commandLink id="deleteTemplateProperty"
                            title="#{msgs.delete}"
                            oncomplete="toggleSave()"
+                           update="templatePropertyTable"
                            action="#{ProcessForm.deleteTemplateProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProcessForm.templateProperty}" value="#{property}"/>
