Refactor add / delete methods in UserForm

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
@@ -39,7 +39,7 @@
                         </p:column>
                         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                             <p:commandLink id="addUserGroup"
-                                           action="#{UserForm.addToGroup}"
+                                           action="#{UserForm.addToUserGroup}"
                                            title="add to user group"
                                            update="editForm:userTabView:usergroupDatatable"
                                            oncomplete="toggleSave()">
