Update frontend for partial indexing

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexing.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexing.xhtml
@@ -76,7 +76,8 @@
                         <thead>
                         <tr>
                             <th><h:outputText value="#{msgs.objectType}"/></th>
-                            <th><h:outputText value="#{msgs.startIndexing}"/></th>
+                            <th><h:outputText value="#{msgs.startIndexingAll}"/></th>
+                            <th><h:outputText value="#{msgs.startIndexingRemaining}"/></th>
                             <th><h:outputText value="#{msgs.progress}"/></th>
                             <th><h:outputText value="#{msgs.indexedEntries}"/></th>
                             <th><h:outputText value="#{msgs.status}"/></th>
@@ -104,6 +105,15 @@
                                                  onclick="PF('allProgress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
                                                  value="#{msgs.startIndexing}"
                                                  action="#{indexingForm.startAllIndexing()}"
+                                                 disabled="#{!indexingForm.indexExists() or indexingForm.mappingEmpty or (indexingForm.indexingInProgress())}"/>
+                            </td>
+                            <td>
+                                <p:commandButton widgetVar="startIndexingAll"
+                                                 id="startIndexingAllRemainingButton"
+                                                 rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
+                                                 onclick="PF('allProgress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
+                                                 value="#{msgs.startIndexing}"
+                                                 action="#{indexingForm.startAllIndexingRemaining()}"
                                                  disabled="#{!indexingForm.indexExists() or indexingForm.mappingEmpty or (indexingForm.indexingInProgress())}"/>
                             </td>
                             <td>
