--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexingRow.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexingRow.xhtml
@@ -28,6 +28,15 @@
                                  disabled="#{!indexingForm.indexExists() or indexingForm.mappingEmpty or (indexingForm.indexingInProgress() or indexingForm.getNumberOfDatabaseObjects(objectType) lt 1)}"/>
             </td>
             <td>
+                <p:commandButton widgetVar="startIndexing#{objectType}"
+                                 rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
+                                 onclick="PF('#{objectType}'+'Progress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
+                                 value="#{msgs.startIndexing}"
+                                 action="#{indexingForm.startIndexingRemaining(objectType)}"
+                                 styleClass="indexing-button"
+                                 disabled="#{!indexingForm.indexExists() or indexingForm.mappingEmpty or (indexingForm.indexingInProgress() or indexingForm.getNumberOfDatabaseObjects(objectType) lt 1)}"/>
+            </td>
+            <td>
                 <p:progressBar widgetVar="#{objectType}Progress"
                                ajax="true"
                                value="#{indexingForm.getProgress(objectType)}"
