--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
@@ -54,6 +54,11 @@
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:setPropertyActionListener target="#{BatchForm.batchHelper.property}" value="#{property}"/>
                 </p:commandLink>
+                <p:commandLink id="deleteProperty" title="#{msgs.delete}"
+                               oncomplete="PF('deletePropertyDialog').show()" update="@(.editDialog)">
+                    <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
+                    <f:setPropertyActionListener target="#{BatchForm.batchHelper.property}" value="#{property}"/>
+                </p:commandLink>
             </p:column>
         </p:dataTable>
     </ui:fragment>
