--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -27,7 +27,8 @@
 
         <p:ajax event="rowToggle" oncomplete="registerRowToggleEvents();" />
 
-        <p:column style="width: 16px;">
+        <p:column style="width: 16px;"
+                  rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewProject',item.client.id)}">
             <p:rowToggler/>
         </p:column>
 
