--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
@@ -42,17 +42,15 @@
             </ui:fragment>
         </p:column>
 
-        <p:column headerText="#{msgs.actions}"
-                  rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editRuleset')}"
-                  styleClass="actionsColumn">
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="rulesetEdit" title="#{msgs.rulesetEdit}">
+                <h:link outcome="rulesetEdit" title="#{msgs.rulesetEdit}"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editRuleset',item.client.id)}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
-                <p:commandLink id="deleteRuleset"
-                               action="#{RulesetForm.delete}"
-                               title="#{msgs.delete}"
+                <p:commandLink id="deleteRuleset" action="#{RulesetForm.delete}" title="#{msgs.delete}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteRuleset',item.client.id)}"
                                update="projectsTabView:rulesetTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{RulesetForm.rulesetById}"/>
